[tool.poetry]
name = "dwkit"
version = "0.1.0"
description = "데이터 전처리"
authors = ["dowon <ks2515@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiomultiprocess = "*"
orjson = "*"
typer = {extras = ["all"], version = "^0.6.1"}
anyio = "^3.6.1"
aiofiles = "^0.8.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
isort = "*"
pre-commit = "*"
mypy = "*"
flake8 = "*"
flake8-bugbear = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
